--- a/proiect-daw/Views/_ViewImports.cshtml
+++ b/proiect-daw/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using ArticlesApp
-@using ArticlesApp.Models
+﻿@using proiect_daw
+@using proiect_daw.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
