--- a/proiect-daw/Views/Auth/Index.cshtml
+++ b/proiect-daw/Views/Auth/Index.cshtml
@@ -1,7 +1,11 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿
+<div class="text-center">
+    <h1 class="display-4">Bine ați venit!</h1>
+    <p>Alegeți una dintre opțiunile de mai jos:</p>
 
-<h1>Buna ziua!</h1>
+    <!-- Buton pentru Login -->
+    <a asp-area="Identity" asp-page="/Account/Login" asp-route-returnUrl="/Home" class="btn btn-primary btn-lg m-2">Login</a>
+
+    <!-- Buton pentru Register -->
+    <a asp-area="Identity" asp-page="/Account/Register" asp-route-returnUrl="/Home" class="btn btn-secondary btn-lg m-2">Register</a>
+</div>
