--- a/proiect-daw/Views/Shared/_LoginPartial.cshtml
+++ b/proiect-daw/Views/Shared/_LoginPartial.cshtml
@@ -2,7 +2,11 @@
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
 
-<ul class="navbar-nav">
+@{
+    var name = @User.Identity?.Name;
+}
+
+
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
@@ -16,11 +20,14 @@
 }
 else
 {
-    <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
-    </li>
+    <div class="text-center">
+        <h1 class="display-4">Bine ați venit!</h1>
+        <p>Alegeți una dintre opțiunile de mai jos:</p>
+
+        <!-- Buton pentru Login -->
+        <a asp-area="Identity" asp-page="/Account/Login" asp-route-returnUrl="/Home" class="btn btn-primary btn-lg m-2">Login</a>
+
+        <!-- Buton pentru Register -->
+        <a asp-area="Identity" asp-page="/Account/Register" asp-route-returnUrl="/Home" class="btn btn-secondary btn-lg m-2">Register</a>
+    </div>
 }
-</ul>
