--- a/proiect-daw/Views/Home/Index.cshtml
+++ b/proiect-daw/Views/Home/Index.cshtml
@@ -5,9 +5,9 @@
         <div class="bg-light rounded-3 p-5 mb-4">
             <div class="row">
                 <div class="col-md-8">
-                    <h1 class="font-roboto display-5 fw-bold">@Html.Raw(ViewBag.FirstArticle.Title)</h1>
-                    <div class="font-montserrat mb-3 truncate">@Html.Raw(ViewBag.FirstArticle.Content)</div>
-                    <a href="/Articles/Show/@ViewBag.FirstArticle.Id" class="btn btn-outline-success">Vezi articolul</a>
+                    <h1 class="font-roboto display-5 fw-bold">@Html.Raw(ViewBag.FirstPost.Title)</h1>
+                    <div class="font-montserrat mb-3 truncate">@Html.Raw(ViewBag.FirstPost.Content)</div>
+                    <a href="/Posts/Show/@ViewBag.FirstPost.Id" class="btn btn-outline-success">Vezi postarea</a>
                 </div>
                 <div class="col-md-4">
                     <img src="https://icon-library.com/images/newspaper-png-icon/newspaper-png-icon-15.jpg" class="img-fluid align-items-center justify-content-center" />
@@ -21,19 +21,19 @@
 
 
 <div class="row mb-4">
-    @foreach (var article in ViewBag.Articles)
+    @foreach (var post in ViewBag.Posts)
     {
         <div class="col-6 row-style">
             <div class="card">
                 <div class="card-title p-3 text-center bg-dark text-white">
-                    <h4>@Html.Raw(article.Title)</h4>
+                    <h4>@Html.Raw(post.Title)</h4>
                 </div>
 
                 <div class="card-body">
-                    <div class="font-montserrat truncate">@Html.Raw(article.Content)</div>
+                    <div class="font-montserrat truncate">@Html.Raw(post.Content)</div>
                 </div>
                 <div class="card-footer">
-                    <a class="btn btn-outline-success" href="/Articles/Show/@article.Id">Vezi Articolul</a>
+                    <a class="btn btn-outline-success" href="/Posts/Show/@post.Id">Vezi Postarea</a>
                 </div>
             </div>
         </div>
