--- a/proiect-daw/Views/Posts/Edit.cshtml
+++ b/proiect-daw/Views/Posts/Edit.cshtml
@@ -1,35 +1,35 @@
-﻿@model proiect_daw.Models.Article
+﻿@model proiect_daw.Models.Post
 
-
-<h2 class="text-center mt-5">Adaugare articol</h2>
+<h2 class="text-center mt-5">Editare</h2>
 
 <br />
 
 <div class="container mt-5">
     <div class="row">
-        <div class="col-6 offset-3">
+        <div class="col-md-6 offset-3">
 
-            <form method="post" asp-action="New" asp-controller="Articles">
+            <form method="post" asp-action="Edit" asp-controller="Posts" asp-route-id="@Model.Id">
+                <!-- 
+                    Metoda 2 prin care se trimite id-ul catre Controller
+                <input type="hidden" asp-for="Id" />  -->
 
                 <div asp-validation-summary="All" class="text-danger"></div>
 
                 <div class="form-group">
-                    <label asp-for="Title" class="form-label">Titlu Articol</label>
+                    <label asp-for="Title" class="form-label">Titlu </label>
                     <br />
                     <input asp-for="Title" class="form-control" />
 
-                    <!-- Mesaj de validare pentru titlu -->
                     <span asp-validation-for="Title" class="text-danger"></span>
 
                     <br /><br />
                 </div>
 
                 <div class="form-group">
-                    <label asp-for="Content" class="form-label">Continut Articol</label>
+                    <label asp-for="Content" class="form-label">Continut </label>
                     <br />
                     <textarea asp-for="Content" class="form-control summernote"></textarea>
 
-                    <!-- Mesaj de validare pentru continut -->
                     <span asp-validation-for="Content" class="text-danger"></span>
 
                     <br /><br />
@@ -42,17 +42,15 @@
                         <option value="">Selectati categoria</option>
                     </select>
 
-                    <!-- Mesaj de validare pentru CategoryId -->
                     <span asp-validation-for="CategoryId" class="text-danger"></span>
 
                     <br />
                 </div>
-                <br />
-                <button class="btn btn-success" type="submit">Adauga articol</button>
+
+                <button class="btn btn-sm btn-success" type="submit">Modifica</button>
 
             </form>
         </div>
     </div>
 </div>
-
 
