--- a/proiect-daw/Views/Posts/Index.cshtml
+++ b/proiect-daw/Views/Posts/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 <br />
-<h2 class="text-center">Afisare articole</h2>
+<h2 class="text-center">Afisare</h2>
 
 <br />
 
@@ -23,13 +23,13 @@
 </form>
 
 
-@foreach (var article in ViewBag.Articles)
+@foreach (var post in ViewBag.Posts)
 {
     <div class="card">
 
-        <partial name="ArticleInfo" model="article"></partial>
+        <partial name="PostInfo" model="post"></partial>
 
-        <a class="btn btn-success" asp-controller="Articles" asp-action="Show" asp-route-id="@article.Id">Afisare articol</a>
+        <a class="btn btn-success" asp-controller="Posts" asp-action="Show" asp-route-id="@post.Id">Afisare</a>
 
     </div>
 
@@ -37,7 +37,6 @@
     <br />
 }
 
-@* Afisarea paginata a articolelor *@
 
 <div>
     <nav aria-label="Page navigation example">
