--- a/proiect-daw/Views/Posts/Show.cshtml
+++ b/proiect-daw/Views/Posts/Show.cshtml
@@ -1,7 +1,7 @@
-﻿@model proiect_daw.Models.Article
+﻿@model proiect_daw.Models.Post
 
 
-@* Afisarea unui articol impreuna cu categoria din care face *@
+@* Afisarea unui postare impreuna cu categoria din care face *@
 
 
 @if (TempData["message"] != null)
@@ -15,30 +15,30 @@
 
 <div class="card">
 
-    <partial name="ArticleInfo" model="Model"></partial>
+    <partial name="PostInfo" model="Model"></partial>
 
     @if ((ViewBag.AfisareButoane == true && Model.UserId == ViewBag.UserCurent)
     || ViewBag.EsteAdmin == true)
     {
         <div class="d-flex flex-row justify-content-between">
 
-            <a class="btn btn-success" asp-controller="Articles" asp-action="Edit" asp-route-id="@Model.Id">Editeaza articol</a>
+            <a class="btn btn-success" asp-controller="Posts" asp-action="Edit" asp-route-id="@Model.Id">Editeaza postare</a>
 
-            <form method="post" asp-controller="Articles" asp-action="Delete" asp-route-id="@Model.Id">
+            <form method="post" asp-controller="Posts" asp-action="Delete" asp-route-id="@Model.Id">
 
-                <button class="btn btn-danger" type="submit">Sterge articol</button>
+                <button class="btn btn-danger" type="submit">Sterge postare</button>
 
             </form>
 
         </div>
     }
 
-    <form method="post" asp-controller="Articles" asp-action="AddBookmark">
-        <input type="hidden" name="ArticleId" value="@Model.Id" />
+    <form method="post" asp-controller="Posts" asp-action="AddBookmark">
+        <input type="hidden" name="PostId" value="@Model.Id" />
         <div class="d-flex flex-row justify-content-center p-3 border-1 border-top">
             <div>
                 <select name="BookmarkId" class="form-control">
-                    <option selected>Adauga acest articol intr-o colectie</option>
+                    <option selected>Adauga acest postare intr-o colectie</option>
                     @foreach (var bookmark in ViewBag.UserBookmarks)
                     {
                         <option value="@bookmark.Id">@bookmark.Name</option>
@@ -117,11 +117,11 @@
 
             <div class="card">
 
-                <form method="post" asp-controller="Articles" asp-action="Show">
+                <form method="post" asp-controller="Posts" asp-action="Show">
 
                     <div class="card-body">
 
-                        <input type="hidden" name="ArticleId" value="@Model.Id" />
+                        <input type="hidden" name="PostId" value="@Model.Id" />
 
                         <label>Continut comentariu</label>
                         <br />
