--- a/proiect-daw/Views/Shared/_Layout.cshtml
+++ b/proiect-daw/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand font-logo" asp-area="" asp-controller="Articles" asp-action="Index">Backbook</a>
+                <a class="navbar-brand font-logo" asp-area="" asp-controller="Posts" asp-action="Index">Backbook</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -28,10 +28,10 @@
                         @if(User.IsInRole("Admin"))
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Articles" asp-action="Index">Afisare articole</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Posts" asp-action="Index">Afisare postari</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Articles" asp-action="New">Adaugare articol</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Posts" asp-action="New">Adaugare postare</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="Index">Afisare categorii</a>
@@ -47,10 +47,10 @@
                         @if (User.IsInRole("Editor"))
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Articles" asp-action="Index">Afisare articole</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Posts" asp-action="Index">Afisare postari</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Articles" asp-action="New">Adaugare articol</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Posts" asp-action="New">Adaugare postare</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Bookmarks" asp-action="Index">Colectii</a>
@@ -60,7 +60,7 @@
                         @if (User.IsInRole("User"))
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Articles" asp-action="Index">Afisare articole</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Posts" asp-action="Index">Afisare postari</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Bookmarks" asp-action="Index">Colectii</a>
