--- a/proiect-daw/Views/Shared/_Layout.cshtml
+++ b/proiect-daw/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Posts" asp-action="Index">Afisare postari</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Posts" asp-action="New">Adaugare postare</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Posts" asp-action="New">Adaugare articol</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="Index">Afisare categorii</a>
@@ -50,7 +50,7 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Posts" asp-action="Index">Afisare postari</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Posts" asp-action="New">Adaugare postare</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Posts" asp-action="New">Adaugare articol</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Bookmarks" asp-action="Index">Colectii</a>
