--- a/proiect-daw/Views/Posts/Index.cshtml
+++ b/proiect-daw/Views/Posts/Index.cshtml
@@ -29,7 +29,7 @@
 
         <partial name="PostInfo" model="post"></partial>
 
-        <a class="btn btn-success" asp-controller="Posts" asp-action="Show" asp-route-id="@post.Id">Afisare</a>
+        <a class="btn btn-primary btn-sm" asp-controller="Posts" asp-action="Show" asp-route-id="@post.Id">Afisare</a>
 
     </div>
 
